# FSAI

./: .gitignore  cone_map.txt  get_yolo_depth.py  main  main.c  makefile
FS-AI_API_Tester/: fs-ai_api_tester.c
can_api/: CMakeLists.txt  init.sh  main.c  makefile  vcu.c
can_api/FS-AI_API/: CMakeLists.txt  fs-ai_api.c
fs-docs/: Getting Started.md
fs-docs/.obsidian/: workspace.json
fs_docs/: README.md
simulation/: init.sh  main  main.c  todo.txt
simulation/2dsim/: run.sh
simulation/2dsim/src/: main.cpp
simulation/FS-AI_API/: fs-ai_api  log
simulation/FS-AI_API_Console/: fs-ai_api_console
simulation/controller_c/: steering.c  throttle.c
simulation/controller_c/dummy_data/: checkpoints.txt  inputs.txt
simulation/controller_c/src/: algorithm.c  controller.h  steering.c  throttle.c  throttle_new.c  throttle_talin.c
simulation/controller_c/tests/: test_steering.c
simulation/path_c/: CMakeLists.txt  main.c  plot_track.py  track_generator.c  track_generator.h
simulation/physics_c/: configDry.yaml  controller.c  demo.c  dynamic_bicycle.c  input.c  physics.h  state.c  vehicle_model.c
simulation/vcu/: makefile  vcu  vcu.c
